--- a/_sources/sources/notebooks_sources/modulo_ve/ejemplo_C_ve_pendulo_invertido.ipynb
+++ b/_sources/sources/notebooks_sources/modulo_ve/ejemplo_C_ve_pendulo_invertido.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "0a31ab4a",
+   "id": "fddd3fe9",
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "59852f1d",
+   "id": "df6d31ce",
    "metadata": {},
    "source": [
     "# Diseño del sistema de control del pédulo invertido"
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "af8b77d8",
+   "id": "df03b640",
    "metadata": {
     "colab_type": "text",
     "id": "zLhphrmYQfRZ"
@@ -52,7 +52,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "d8d0f9ee",
+   "id": "2c5903d6",
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -111,7 +111,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1abe2a56",
+   "id": "cdbf358a",
    "metadata": {
     "colab_type": "text",
     "id": "X5tpCzCqQxbc"
@@ -123,7 +123,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "86184eac",
+   "id": "cb86de63",
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -163,7 +163,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5902dd42",
+   "id": "e9bfd3d1",
    "metadata": {
     "colab_type": "text",
     "id": "j8aD5bcEQ6Mp"
@@ -175,7 +175,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "63b8e036",
+   "id": "30ac5e48",
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -200,7 +200,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "d4d257b6",
+   "id": "ce348aad",
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -241,7 +241,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "3b4ed5ba",
+   "id": "4db9c43d",
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -281,7 +281,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "403e00b9",
+   "id": "ad951c2b",
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -320,7 +320,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "85e972a9",
+   "id": "f7b1e6f3",
    "metadata": {
     "colab_type": "text",
     "id": "0ILtOeUgRDu6"
@@ -332,7 +332,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "35a34d7d",
+   "id": "bf635bb0",
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -390,7 +390,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "2e30545a",
+   "id": "89051209",
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -429,7 +429,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c3b1b760",
+   "id": "0629b980",
    "metadata": {
     "colab_type": "text",
     "id": "GVl0c3o-SQdr"
@@ -441,7 +441,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "6c326487",
+   "id": "d8b07e2c",
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -480,7 +480,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "df45dce5",
+   "id": "9106e937",
    "metadata": {
     "colab_type": "text",
     "id": "YXLS-XtZR0Wz"
@@ -492,7 +492,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "5df3cf67",
+   "id": "2952cbf3",
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -517,8 +517,7 @@
     {
      "data": {
       "text/plain": [
-       "array([-8.00000055+0.00000000e+00j, -7.99999945+0.00000000e+00j,\n",
-       "       -4.        +2.82767841e-07j, -4.        -2.82767841e-07j])"
+       "array([-8.00000064, -7.99999936, -4.00000054, -3.99999946])"
       ]
      },
      "execution_count": 11,
@@ -533,7 +532,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "42da471b",
+   "id": "80245ca5",
    "metadata": {
     "colab_type": "text",
     "id": "SYwU4LmaScIE"
@@ -544,7 +543,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "015a4c00",
+   "id": "7429d991",
    "metadata": {
     "colab_type": "text",
     "id": "dePTqAuIjvWM"
@@ -556,7 +555,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "6673f182",
+   "id": "de566f93",
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -582,7 +581,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "941cf5a5",
+   "id": "2edab71b",
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -641,7 +640,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "b0107c71",
+   "id": "eba408f6",
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -666,8 +665,8 @@
     {
      "data": {
       "text/plain": [
-       "array([-8.+6.10065350e-07j, -8.-6.10065350e-07j, -4.+2.21980242e-07j,\n",
-       "       -4.-2.21980242e-07j])"
+       "array([-8.        +2.97116012e-07j, -8.        -2.97116012e-07j,\n",
+       "       -4.00000034+0.00000000e+00j, -3.99999966+0.00000000e+00j])"
       ]
      },
      "execution_count": 14,
@@ -681,7 +680,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8560f729",
+   "id": "ec58bd6e",
    "metadata": {
     "colab_type": "text",
     "id": "TvMLcJ3H2Y8H"
@@ -693,7 +692,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "7433ae18",
+   "id": "d3624a7c",
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -718,7 +717,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "fe38fe9e",
+   "id": "d16adbfc",
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -748,7 +747,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "a710c802",
+   "id": "6b36b569",
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -797,7 +796,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "d63d2b22",
+   "id": "e2804724",
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -822,7 +821,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "636414fb",
+   "id": "b88671d3",
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -872,7 +871,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "224ce53e",
+   "id": "af263b09",
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -913,7 +912,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "b62b0d41",
+   "id": "e5c3051d",
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -955,7 +954,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "1ad41d84",
+   "id": "3f50fb26",
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -996,7 +995,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "4255e5a8",
+   "id": "efa7b079",
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -1022,7 +1021,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "080111ae",
+   "id": "9b9ad30e",
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -1063,7 +1062,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "c068d074",
+   "id": "beaefd47",
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -1103,7 +1102,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "00dfe874",
+   "id": "21e6d2d1",
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -1164,7 +1163,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d14c0020",
+   "id": "9f478aa6",
    "metadata": {
     "colab": {},
     "colab_type": "code",
