--- a/_sources/sources/notebooks_sources/modulo_ve/ejemplo_C_ve_pendulo_invertido.ipynb
+++ b/_sources/sources/notebooks_sources/modulo_ve/ejemplo_C_ve_pendulo_invertido.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "7b80c222",
+   "id": "62f151a4",
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7386cee7",
+   "id": "9ebfdda0",
    "metadata": {},
    "source": [
     "# Diseño del sistema de control del pédulo invertido"
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6e02b7b4",
+   "id": "9a332de6",
    "metadata": {
     "colab_type": "text",
     "id": "zLhphrmYQfRZ"
@@ -52,7 +52,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "a84941e3",
+   "id": "b394cb51",
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -111,7 +111,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1dd70417",
+   "id": "f2948482",
    "metadata": {
     "colab_type": "text",
     "id": "X5tpCzCqQxbc"
@@ -123,7 +123,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "97449b2e",
+   "id": "ac1e61a8",
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -163,7 +163,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1759f8d8",
+   "id": "0b934fbd",
    "metadata": {
     "colab_type": "text",
     "id": "j8aD5bcEQ6Mp"
@@ -175,7 +175,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "ca2c83e4",
+   "id": "bbf23497",
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -200,7 +200,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "d8b86daf",
+   "id": "080c7858",
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -241,7 +241,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "d80b7377",
+   "id": "a817d88f",
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -281,7 +281,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "556f2251",
+   "id": "61ce81d4",
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -320,7 +320,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8e58a5ab",
+   "id": "bba85a76",
    "metadata": {
     "colab_type": "text",
     "id": "0ILtOeUgRDu6"
@@ -332,7 +332,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "4fb6358c",
+   "id": "5da3474f",
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -390,7 +390,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "fe610c0d",
+   "id": "ca95009e",
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -429,7 +429,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8bb0faaa",
+   "id": "1d8a4084",
    "metadata": {
     "colab_type": "text",
     "id": "GVl0c3o-SQdr"
@@ -441,7 +441,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "2f323d18",
+   "id": "1833d920",
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -480,7 +480,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4c4a36ea",
+   "id": "7753ef64",
    "metadata": {
     "colab_type": "text",
     "id": "YXLS-XtZR0Wz"
@@ -492,7 +492,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "efde0e20",
+   "id": "e353b0c0",
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -517,8 +517,7 @@
     {
      "data": {
       "text/plain": [
-       "array([-8.00000055+0.00000000e+00j, -7.99999945+0.00000000e+00j,\n",
-       "       -4.        +2.82767841e-07j, -4.        -2.82767841e-07j])"
+       "array([-8.00000064, -7.99999936, -4.00000054, -3.99999946])"
       ]
      },
      "execution_count": 11,
@@ -533,7 +532,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b03e0853",
+   "id": "2f70c5db",
    "metadata": {
     "colab_type": "text",
     "id": "SYwU4LmaScIE"
@@ -544,7 +543,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5a61d9f7",
+   "id": "a2d7dd9f",
    "metadata": {
     "colab_type": "text",
     "id": "dePTqAuIjvWM"
@@ -556,7 +555,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "4b94fac0",
+   "id": "42853a82",
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -582,7 +581,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "b2e01fb9",
+   "id": "6be489f9",
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -641,7 +640,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "5d9a9af0",
+   "id": "154ebfff",
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -666,8 +665,8 @@
     {
      "data": {
       "text/plain": [
-       "array([-8.+6.10065350e-07j, -8.-6.10065350e-07j, -4.+2.21980242e-07j,\n",
-       "       -4.-2.21980242e-07j])"
+       "array([-8.        +2.97116012e-07j, -8.        -2.97116012e-07j,\n",
+       "       -4.00000034+0.00000000e+00j, -3.99999966+0.00000000e+00j])"
       ]
      },
      "execution_count": 14,
@@ -681,7 +680,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9a1b266b",
+   "id": "b8b18011",
    "metadata": {
     "colab_type": "text",
     "id": "TvMLcJ3H2Y8H"
@@ -693,7 +692,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "75aced8c",
+   "id": "f0a150a3",
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -718,7 +717,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "e8c6f167",
+   "id": "9181513d",
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -748,7 +747,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "635930a0",
+   "id": "5143e471",
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -797,7 +796,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "0393427c",
+   "id": "8086a003",
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -822,7 +821,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "9f1c4974",
+   "id": "964910bd",
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -872,7 +871,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "0acc8b52",
+   "id": "5e4749be",
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -913,7 +912,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "674b169f",
+   "id": "8fb94e5e",
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -955,7 +954,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "2f8ddb47",
+   "id": "99486564",
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -996,7 +995,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "74ba9270",
+   "id": "64d315ff",
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -1022,7 +1021,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "b24e4695",
+   "id": "faa36a6a",
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -1063,7 +1062,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "2835d819",
+   "id": "584fad3a",
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -1103,7 +1102,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "01c20410",
+   "id": "3da3c764",
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -1164,7 +1163,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f9da9ac0",
+   "id": "30ecace1",
    "metadata": {
     "colab": {},
     "colab_type": "code",
